# MPLogger

./: .travis.yml  Makefile  README.md  pyproject.toml
src/mplogger/: __init__.py  logger.py  version.py
tests/: test_entrypoint.py
