[tool.poetry]
name = "mplogger"
version = "1.0.0"
description = "Multi-processing capable print-like logger for Python"
readme = "README.md"
repository = "https://github.com/ELTE-DH/MPLogger"
authors = ["dlazesz"]
license = "LGPLv3"
# License and required Python version is automatically added
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
